--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  app:
+  api:
     build: 
       context: .
       dockerfile: Dockerfile
@@ -13,12 +13,13 @@ services:
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    networks:
+      - postgres_network
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-  db:
+  postgres-db:
     image: postgres:latest
     restart: unless-stopped
     volumes:
@@ -27,9 +28,17 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
-
+    networks:
+      - postgres_network
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
 volumes:
   postgres-data:
+      driver: local
+      name: postgres-data
+      
+networks:
+  postgres_network:
+    driver: bridge
+    name: postgres-network
